<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokédex</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for Pokémon</string>
    <string name="view_as_list">View as List</string>
    <string name="view_as_grid">View as Grid</string>
    <string name="no_network_conn">No network connection. Please try again later.</string>
    <string name="empty_dex">No Pokémon found.</string>
    <string name="type">Type:</string>
    <string name="tags">Tags:</string>
    <string name="hp_descriptor">HP:</string>
    <string name="patk_descriptor">Attack:</string>
    <string name="pdef_descriptor">Defense:</string>
    <string name="stat_placeholder">100</string>
    <string name="spatk_descriptor">Sp. Atk:</string>
    <string name="spdef_descriptor">Sp. Def:</string>
    <string name="spe_descriptor">Speed:</string>
    <string name="moveset_descriptor">Movesets</string>
    <string name="view_moveset_detail">View moveset detail</string>
    <string name="no_movesets_found">No movesets found.</string>
    <string name="empty_abilities">No abilities found.</string>
    <string name="empty_moves">No moves found.</string>
    <string name="category_description">Category Type</string>
    <string name="empty_items">No items found.</string>
    <string name="empty_types">No types found.</string>
    <string name="hp_short_descriptor">HP</string>
    <string name="patk_short_descriptor">Atk</string>
    <string name="pdef_short_descriptor">Def</string>
    <string name="spatk_short_descriptor">SpA</string>
    <string name="spdef_short_descriptor">SpD</string>
    <string name="spe_short_descriptor">Spe</string>
    <string name="move_1_descriptor">Move 1:</string>
    <string name="new_moveset">New</string>
    <string name="double_dmg_to">2x damage to</string>
    <string name="half_dmg_from">½x damage from</string>
    <string name="half_dmg_to">½x damage to</string>
    <string name="double_dmg_from">2x damage from</string>
    <string name="immune_from">Immune to</string>
    <string name="cannot_dmg">Can\'t damage</string>
    <string name="empty_natures">No natures found.</string>
    <string name="abilities_descriptor">Abilities</string>
    <string name="empty_machine_text">No TMs/HMs found.</string>
    <string name="title_activity_display_machine">DisplayMachineActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_machines_text">No TMs/HMs found.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_descriptor">Location</string>
    <string name="power_descriptor">Power:</string>
    <string name="accuracy_descriptor">Accuracy:</string>
    <string name="pp_descriptor">PP:</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="stats_descriptor">Base Stats</string>
    <string name="level_moves_descriptor">Level Up Moves</string>
    <string name="accuracy_short_descriptor">Acc</string>
    <string name="power_short_descriptor">BP</string>

</resources>
