<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/half_margin">

    <com.github.chessdork.pokedex.ui.VerticalTextView
        android:id="@+id/type_name"
        android:text="@string/stat_placeholder"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        style="@style/TypeText.Large.Vertical"/>

    <LinearLayout
        android:id="@+id/good_matchups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/type_name"
        android:layout_toEndOf="@id/type_name"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            style="@style/Matchups.Good">

            <TextView
                android:id="@+id/double_dmg_to"
                android:text="@string/double_dmg_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <com.wefika.flowlayout.FlowLayout
                android:id="@+id/double_dmg_to_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|top"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            style="@style/Matchups.Good">

            <TextView
                android:id="@+id/half_dmg_from"
                android:text="@string/half_dmg_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <com.wefika.flowlayout.FlowLayout
                android:id="@+id/half_dmg_from_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bad_matchups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/good_matchups"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_toRightOf="@id/type_name"
        android:layout_toEndOf="@id/type_name">

        <LinearLayout
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            style="@style/Matchups.Bad">

            <TextView
                android:id="@+id/half_dmg_to"
                android:text="@string/half_dmg_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <com.wefika.flowlayout.FlowLayout
                android:id="@+id/half_dmg_to_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            style="@style/Matchups.Bad">

            <TextView
                android:id="@+id/double_dmg_from"
                android:text="@string/double_dmg_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <com.wefika.flowlayout.FlowLayout
                android:id="@+id/double_dmg_from_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>
    </LinearLayout>
 </RelativeLayout>