<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/pokemon_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/pokemon_name"
                    android:layout_marginBottom="10dp"
                    style="@style/NameLarge" />

                <TextView
                    android:id="@+id/pokemon_type1"
                    style="@style/TypeText.Large"
                    android:layout_below="@id/pokemon_name"/>

                <TextView
                    android:id="@+id/pokemon_type2"
                    style="@style/TypeText.Large"
                    android:layout_toRightOf="@id/pokemon_type1"
                    android:layout_toEndOf="@id/pokemon_type1"
                    android:layout_below="@id/pokemon_name"/>

                <TextView
                    android:id="@+id/pokemon_tags"
                    style="@style/TagText.Large"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/pokemon_name"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/pokemon_type1"
                    android:contentDescription="@string/pokemon_image"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/stats_descriptor"
                    android:text="@string/stats_descriptor"
                    android:layout_marginBottom="10dp"
                    style="@style/NameLarge"/>

                <LinearLayout
                    android:id="@+id/hp_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/stats_descriptor">

                    <TextView
                        android:id="@+id/hp_descriptor"
                        style="@style/StatDescriptorText"
                        android:text="@string/hp_descriptor"/>

                    <TextView
                        android:id="@+id/hp_stat"
                        style="@style/StatText"
                        android:text="@string/stat_placeholder"/>

                    <View
                        android:id="@+id/hp_rectangle"
                        style="@style/StatRectangle"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/patk_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/hp_layout">

                    <TextView
                        android:id="@+id/patk_descriptor"
                        style="@style/StatDescriptorText"
                        android:text="@string/patk_descriptor"/>

                    <TextView
                        android:id="@+id/patk_stat"
                        style="@style/StatText"
                        android:text="@string/stat_placeholder"/>

                    <View
                        android:id="@+id/patk_rectangle"
                        style="@style/StatRectangle"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pdef_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/patk_layout">

                    <TextView
                        android:id="@+id/pdef_descriptor"
                        style="@style/StatDescriptorText"
                        android:text="@string/pdef_descriptor"/>

                    <TextView
                        android:id="@+id/pdef_stat"
                        style="@style/StatText"
                        android:text="@string/stat_placeholder"/>

                    <View
                        android:id="@+id/pdef_rectangle"
                        style="@style/StatRectangle"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spatk_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/pdef_layout">

                    <TextView
                        android:id="@+id/spatk_descriptor"
                        style="@style/StatDescriptorText"
                        android:text="@string/spatk_descriptor"/>

                    <TextView
                        android:id="@+id/spatk_stat"
                        style="@style/StatText"
                        android:text="@string/stat_placeholder"/>

                    <View
                        android:id="@+id/spatk_rectangle"
                        style="@style/StatRectangle"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spdef_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/spatk_layout">

                    <TextView
                        android:id="@+id/spdef_descriptor"
                        style="@style/StatDescriptorText"
                        android:text="@string/spdef_descriptor"/>

                    <TextView
                        android:id="@+id/spdef_stat"
                        style="@style/StatText"
                        android:text="@string/stat_placeholder"/>

                    <View
                        android:id="@+id/spdef_rectangle"
                        style="@style/StatRectangle"
                        android:visibility="invisible"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spe_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/spdef_layout">

                    <TextView
                        android:id="@+id/spe_descriptor"
                        style="@style/StatDescriptorText"
                        android:text="@string/spe_descriptor"/>

                    <TextView
                        android:id="@+id/spe_stat"
                        style="@style/StatText"
                        android:text="@string/stat_placeholder"/>

                    <View
                        android:id="@+id/spe_rectangle"
                        style="@style/StatRectangle"
                        android:visibility="invisible"/>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/level_moves_descriptor"
                    android:text="@string/level_moves_descriptor"
                    android:layout_marginBottom="10dp"
                    style="@style/NameLarge"/>

                <LinearLayout
                    android:id="@+id/level_up_moves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>